[package]
name = "dpb"
version = "0.1.0"
edition = "2021"
authors = ["tfia <duruohe@outlook.com>"]

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
redb = "2.4.0"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
